--- a/Episode 07 - Finding the Path/Code/index.css
+++ b/Episode 07 - Finding the Path/Code/index.css
@@ -161,6 +161,33 @@
   background-color: #efefef;
 }
 
+/*Animation to Shimmer Component Card and Menu card Start*/
+.stroke {
+  /* height: 15px; */
+  background: #777;
+}
+
+.stroke-color {
+  background: #777;
+}
+
+.animate {
+  animation: shimmer 3s;
+  animation-iteration-count: infinite;
+  background: linear-gradient(to right, #e6e6e6 5%, #cccccc 25%, #e6e6e6 35%);
+  background-size: 1000px 100%;
+}
+
+@keyframes shimmer {
+  from {
+    background-position: -1000px 0;
+  }
+  to {
+    background-position: 1000px 0;
+  }
+}
+/*Animation to Shimmer Component Card and Menu card End*/
+
 .loginBtn {
   background-color: orange;
   border-radius: 5px;
